# servicehive-assignment

./: .env.example  .gitignore  README.md  pyproject.toml
knowledge_base/: faq.md  policies.md  pricing_features.md
prompts/: intent_classifier.md  lead_capture_prompt.md  rag_prompt.md  system_prompt.md
src/: __init__.py  app.py  models.py
src/agents/: __init__.py  intent_detector.py  lead_collector.py  rag_retriever.py
src/config/: __init__.py  settings.py
src/graph/: workflow.py
src/models/: __init__.py  lead.py  state.py
src/services/: __init__.py  embeddings.py  vector_store.py
src/tools/: __init__.py  lead_capture.py
src/utils/: prompt_loader.py
