[project]
name = "autostream-agent"
version = "0.1.0"
description = "AutoStream AI Agent - Conversational AI with RAG and lead capture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    "chainlit>=1.0.0",
    "chromadb>=0.4.22",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
