[project]
name = "autostream-agent"
version = "0.1.0"
description = "AutoStream AI Agent - Conversational AI with RAG and lead capture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.5",
    "chromadb>=1.4.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]
